--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "accordion": "^3.0.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   }
 }
